<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_name">My IUT Schedule</string>
    <string name="application_email">caceresenzo1502@gmail.com</string>
    <string name="application_github">https://github.com/Caceresenzo/My-IUT-Schedule</string>
    <!--  -->
    <string name="author_github">https://github.com/Caceresenzo</string>

    <!--  -->
    <string name="notification_channel_next_event_title">Next Event</string>
    <string name="notification_channel_next_event_description">Display the next event on your schedule.</string>

    <!--  -->
    <string name="intro_welcome_title">Welcome</string>
    <string name="intro_welcome_description">on your new scheduler</string>
    <string name="intro_source_public_title">Public Source Code</string>
    <string name="intro_source_public_description">you can at any moment read the code online\n(just go in the About section)</string>
    <string name="intro_school_title">Compatible Schools</string>
    <string name="intro_school_description">(well... maybe...)</string>
    <string name="intro_school_radio_mine_is_present">My school is here.</string>
    <string name="intro_school_radio_mine_is_not_present">My school is not here, but i want to try anyway...</string>
    <string name="intro_school_error_select_choice">Please select an answer.</string>
    <string name="intro_account_title">Account Configuration</string>
    <string name="intro_account_description">(this is your student\'s id)</string>
    <string name="intro_account_button_check">CHECK</string>
    <string name="intro_account_state">Current state</string>
    <string name="intro_account_state_waiting">WAITING</string>
    <string name="intro_account_state_checking">CHECKING</string>
    <string name="intro_account_state_valid">VALID</string>
    <string name="intro_account_state_invalid">NOT VALID</string>
    <string name="intro_account_state_error">ERROR</string>
    <string name="intro_account_error_invalid">Please validate your account before.</string>
    <string name="intro_finish_title">Completed!</string>
    <string name="intro_finish_description">your schedule is now ready</string>

    <!--  -->
    <string name="action_today">Today</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_group_visibility">Visibility</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">@string/about</string>

    <!--  -->
    <string name="service_started">Background task has started.</string>
    <string name="service_stopped">Background task has been stopped.</string>
    <string name="service_action_stop">Stop</string>
    <string name="service_action_open_event">Open Event</string>

    <!--  -->
    <string name="downloading_calendar">Downloading calendar...</string>

    <!--  -->
    <string name="error_no_calendar">No Calendar.</string>
    <string name="error_no_next_event">No Remaining Event.</string>
    <string name="error_failed_to_download_calendar">Failed to download calendar.\n%s</string>

    <!--  -->
    <string name="time_range_tomorow">tomorrow</string>
    <string name="time_range_in_days_format">in %s days</string>

    <!--  -->
    <string name="day_of_week_date_format">EEEE, MMM dd, yyyy</string>
    <string name="week_day_date_format">M/d</string>

    <!-- Preferences -->
    <string name="pref_main_general_cagetory">General</string>
    <!--  -->
    <string name="pref_main_general_reset_key">reset</string>
    <string name="pref_main_general_reset_title">Reset</string>
    <string name="pref_main_general_reset_summary">Lunch the setup screen again to change user.</string>
    <!--  -->
    <string name="pref_main_time_cagetory">Time</string>
    <!--  -->
    <string name="pref_main_time_iteration_relay_key">iteration_delay</string>
    <string name="pref_main_time_iteration_relay_default">60</string>
    <string name="pref_main_time_iteration_relay_title">Iteration Delay</string>
    <string name="pref_main_time_iteration_relay_summary">%s, is how much time is being wait between two service update, and so, notification update.</string>
    <string name="pref_main_time_iteration_relay_summary_disabled">Feature disabled, the backgroud service will not be used.</string>
    <!--  -->
    <string name="pref_main_time_refresh_relay_key">refresh_delay</string>
    <string name="pref_main_time_refresh_relay_default">10</string>
    <string name="pref_main_time_refresh_relay_title">Automatic Refresh Delay</string>
    <string name="pref_main_time_refresh_relay_summary">%s, is how much iteration has to be done before trying to refresh the calendar.</string>
    <string name="pref_main_time_refresh_relay_summary_disabled">Feature disabled, the calendar will not be automatically refresh.</string>

    <!-- About -->
    <string name="about">About</string>
    <!--  -->
    <string name="about_application">Application</string>
    <string name="about_application_author">by @Caceresenzo</string>
    <string name="about_application_github">See the GitHub</string>
    <string name="about_description">Description</string>
    <string name="about_description_text">This application provide a quick look of your schedule and always notify you with a notification to let you know what lesson/event come next.</string>
    <string name="about_author">Author</string>
    <string name="about_author_author_detail">Enzo Caceres</string>
    <string name="about_author_author_location">France</string>
    <string name="about_author_github">See my Github</string>
    <string name="about_author_website">Visit my website</string>
    <string name="about_author_email">Send me an email</string>
    <!--  -->
    <string name="about_team">Team</string>
    <!--  -->
    <string name="about_team_format_type_application">Application</string>
    <string name="about_team_format_type_ui">UI</string>
    <string name="about_team_format_type_ui_design">UI Design</string>
    <string name="about_team_format_separator">,%s</string>

    <!-- Activities -->
    <string name="activity_about">@string/about</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_schedule_item_detail">Schedule Item Detail</string>

</resources>